# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "server"
version = "0.6.2-edge.1"
edition = "2024"
license = "Apache-2.0"

[package.metadata.cargo-udeps.ignore]
normal = ["tracing-appender"]

[package.metadata.cargo-machete]
ignored = ["vergen-git2"]

[[bin]]
name = "iggy-server"
path = "src/main.rs"

[features]
default = ["mimalloc", "iggy-web"]
disable-mimalloc = []
mimalloc = ["dep:mimalloc"]
iggy-web = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
async-channel = { workspace = true }
async_zip = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
compio = { workspace = true }
compio-net = { workspace = true }
compio-quic = { workspace = true }
compio-tls = { workspace = true }
compio-ws = { workspace = true }
configs = { workspace = true }
ctrlc = { version = "3.5", features = ["termination"] }
cyper = { workspace = true }
cyper-axum = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true }
dotenvy = { workspace = true }
enum_dispatch = { workspace = true }
err_trail = { workspace = true }
error_set = { workspace = true }
figlet-rs = { workspace = true }
figment = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
hash32 = "1.0.0"
human-repr = { workspace = true }
iggy_common = { workspace = true }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
left-right = { workspace = true }
lending-iterator = "0.1.7"
metadata = { workspace = true }
mimalloc = { workspace = true, optional = true }
mime_guess = { version = "2.0", optional = true }
moka = { version = "0.12.13", features = ["future"] }
nix = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }
papaya = "0.2.3"
prometheus-client = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls-no-provider"] }
ringbuffer = "0.16.0"
rmp-serde = { workspace = true }
rust-embed = { version = "8.11.0", optional = true }
rustls = { workspace = true }
rustls-pemfile = "2.2.0"
send_wrapper = "0.6.0"
serde = { workspace = true }
serde_with = { workspace = true }
slab = { workspace = true }
socket2 = "0.6.2"
static-toml = "1.3.0"
strum = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
toml = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tungstenite = { workspace = true }
ulid = "1.2.1"
uuid = { workspace = true }

[target.'cfg(not(target_env = "musl"))'.dependencies]
hwlocality = { workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
hwlocality = { workspace = true, features = ["vendored"] }

[build-dependencies]
figment = { version = "0.10.19", features = ["json", "toml", "env"] }
vergen-git2 = { version = "9.1.0", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }
