# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "shard"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[features]
# Simulator-only test hook (`IggyShard::init_partition`): bypasses the
# reconciler's `ReconcileOp::InsertOwned` funnel, mutating `IggyPartitions`
# off the pump task. A `-p iggy-server-ng` build excludes it; `cargo build
# --workspace` unifies features and compiles it into the shared `shard`
# unit (simulator requests it). Benign: no production caller.
simulator = []

[dependencies]
compio = { workspace = true }
consensus = { path = "../consensus" }
crossfire = { workspace = true }
futures = { workspace = true }
hash32 = { workspace = true }
iggy_binary_protocol = { path = "../binary_protocol" }
iggy_common = { path = "../common" }
journal = { path = "../journal" }
message_bus = { path = "../message_bus" }
metadata = { path = "../metadata" }
papaya = { workspace = true }
partitions = { path = "../partitions" }
prometheus-client = { workspace = true }
server_common = { path = "../server_common" }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "warn"
