# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library", "cc_test")

genrule(
    name = "cargo_build",
    srcs = glob(["src/**/*.rs"]) + [
        "Cargo.toml",
        "Cargo.lock",
        "build.rs",
    ],
    outs = [
        "libiggy_cpp.a",
        "include/lib.rs.h",
        "cxxbridge/rust/cxx.h",
    ],
    cmd = """
        set -euo pipefail

        CARGO="$$(command -v cargo)"
        EXECROOT="$$(pwd)"
        CARGO_TARGET_DIR="$$EXECROOT/$(@D)/cargo_target"
        OUT_LIB="$$EXECROOT/$(location libiggy_cpp.a)"
        OUT_RS="$$EXECROOT/$(location include/lib.rs.h)"
        OUT_CXX="$$EXECROOT/$(location cxxbridge/rust/cxx.h)"

        PROJECT_ROOT="$$(dirname $$(readlink -f $(location Cargo.toml)))"
        cd "$$PROJECT_ROOT"

        PROFILE="debug"
        FLAGS=""
        if [ "$(COMPILATION_MODE)" = "opt" ]; then
            PROFILE="release"
            FLAGS="--release"
        fi

        mkdir -p "$$CARGO_TARGET_DIR"
        env -u PWD CARGO_TARGET_DIR="$$CARGO_TARGET_DIR" "$$CARGO" build $$FLAGS --locked

        cp "$$CARGO_TARGET_DIR/$$PROFILE/libiggy_cpp.a" "$$OUT_LIB"

        RS_HDR="$$(find "$$CARGO_TARGET_DIR/$$PROFILE/build" -name lib.rs.h -print -quit)"
        if [ -z "$$RS_HDR" ]; then
            echo "ERROR: Failed to locate generated lib.rs.h under $$CARGO_TARGET_DIR/$$PROFILE/build" >&2
            exit 1
        fi
        cp "$$RS_HDR" "$$OUT_RS"

        CXX_HDR="$$(find "$$CARGO_TARGET_DIR/$$PROFILE/build" -name cxx.h -print -quit)"
        if [ -z "$$CXX_HDR" ]; then
            echo "ERROR: Failed to locate generated cxx.h under $$CARGO_TARGET_DIR/$$PROFILE/build" >&2
            exit 1
        fi
        cp "$$CXX_HDR" "$$OUT_CXX"
    """,
    local = 1,
)

cc_import(
    name = "iggy_cpp_static",
    static_library = ":libiggy_cpp.a",
)

cc_library(
    name = "iggy-cpp",
    srcs = glob([
        "src/*.cpp",
    ], allow_empty = True),
    hdrs = [
        "include/iggy.hpp",
        ":include/lib.rs.h",
        ":cxxbridge/rust/cxx.h",
    ],
    includes = [
        "cxxbridge",
        "include",
    ],
    linkopts = [
        "-ldl",
        "-lpthread",
    ] + select({
        "@platforms//os:macos": [
            "-framework", "CoreFoundation",
            "-framework", "Security",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":iggy_cpp_static",
    ],
)

cc_test(
    name = "iggy-cpp-test",
    srcs = ["tests/test.cpp"],
    deps = [
        ":iggy-cpp",
        "@googletest//:gtest_main",
    ],
)
