# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iggy-cpp"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["cxx-build"]

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.194"
iggy = { path = "../../core/sdk" }
iggy_common = { path = "../../core/common" }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }

[build-dependencies]
cxx-build = "1.0.194"
