# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "apache-iggy"
version = "0.6.0"
edition = "2021"
authors = ["Dario Lencina Talarico <darioalessandrolencina@gmail.com>", "Albin Skott <albin@mattsson.io>"]
license = "Apache-2.0"
description = "Apache Iggy is the persistent message streaming platform written in Rust, supporting QUIC, TCP and HTTP transport protocols, capable of processing millions of messages per second."
documentation = "https://iggy.apache.org/docs/"
repository = "https://github.com/apache/iggy"

[dependencies]
bytes = "1.10.1"
iggy = { path = "../../core/sdk", version = "0.8.0" }
pyo3 = "0.26.0"
pyo3-async-runtimes = { version = "0.26.0", features = [
    "attributes",
    "tokio-runtime",
] }
pyo3-stub-gen = { git = "https://github.com/Jij-Inc/pyo3-stub-gen.git", rev = "63e77533b55782799df28ea4b4676c42d203779e" }
tokio = "1.47.1"

[lib]
name = "apache_iggy"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
doc = false
