[package]
name = "iggy-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
axum-server = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
figlet-rs = { workspace = true }
iggy = { workspace = true }
rmcp = { version = "0.3.0", features = [
    "server",
    "transport-io",
    "transport-sse-server",
    "transport-streamable-http-server",
] }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
