# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iggy-mcp"
version = "0.2.0"
description = "MCP Server for Iggy message streaming platform"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/apache/iggy"
homepage = "https://iggy.apache.org"
keywords = ["iggy", "messaging", "streaming", "mcp"]
readme = "README.md"

[dependencies]
axum = { workspace = true }
axum-server = { workspace = true }
dotenvy = { workspace = true }
figlet-rs = { workspace = true }
figment = { workspace = true }
iggy = { workspace = true }
iggy_common = { workspace = true }
rmcp = { version = "0.9.0", features = [
    "server",
    "transport-io",
    "transport-sse-server",
    "transport-streamable-http-server",
] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
