[package]
name = "bench-runner"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dircpy = "0.3.19"
git2 = "0.20.2"
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "iggy-bench-runner"
path = "src/main.rs"
