[package]
name = "bench-runner"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dircpy = "0.3.19"
git2 = { version = "0.20.2", default-features = false, features = [
    "vendored-libgit2",
] }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "iggy-bench-runner"
path = "src/main.rs"
